after update of VS code I no longer see errors in my Problems pane for html files.  Have reinstalled 2x still not html errors recognized.  Heve editted settings.JSON still no change.  Am unable to get done what I would lie ot here until I can get this resolved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnType": true,
+  "better-comments.highlightPlainText": true,
+  "bracketPairColorizer.excludedLanguages": [],
+  "html.format.endWithNewline": true,
+  "html.format.indentInnerHtml": true,
+  "html.format.maxPreserveNewLines": 2
 }
